# cityscapes-segmentation

./: .gitignore  README.md  pyproject.toml
src/core/: config.py  dataset.py  loss.py  main.py  net.py  processor.py  trainer.py
src/notebook/: cityscapes-training-1.ipynb
