[project]
name = "cityscapes-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "hxastur",email = "arz.mikhail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (==2.9.0)",
    "ipykernel (>=7.0.0,<8.0.0)",
    "numpy (==2.2)",
    "pandas (>=2.3.3,<3.0.0)",
    "clearml (>=2.0.2,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
